--- a/Day01-15/01.初识Python.md
+++ b/Day01-15/01.初识Python.md
@@ -1,6 +1,10 @@
 ## 初识Python
 
 > **温馨提示**：2018年创建这个仓库的时候，关于Python语言基础这个部分的内容写得相对是比较粗糙，对粗学者可能不是那么友好。如果你正好是一名初学者，建议你移步到我的另一个仓库[Python-for-Freshmen-2023](https://github.com/jackfrued/Python-for-Freshmen-2023)，这个仓库对初学者更加友好，对应的内容，大家也可以在我的知乎专栏“从零开始学Python”中找到，点击进入[传送门](https://www.zhihu.com/column/c_1216656665569013760)。
+>
+> Translation
+> Getting Started with Python
+> Note: When this repository was created in 2018, the content on the basics of Python was written relatively roughly, which might not be very friendly to beginners. If you happen to be a beginner, you might want to start with some other Python learning resources.
 
 ### Python简介
 
@@ -13,6 +17,17 @@
 5. 2008年12月3日：Python 3.0发布，它并不完全兼容之前的Python代码，不过因为目前还有不少公司在项目和运维中使用Python 2.x版本，所以Python 3.x的很多新特性后来也被移植到Python 2.6/2.7版本中。
 
 目前我使用的Python 3.7.x的版本是在2018年发布的，Python的版本号分为三段，形如A.B.C。其中A表示大版本号，一般当整体重写，或出现不向后兼容的改变时，增加A；B表示功能更新，出现新功能时增加B；C表示小的改动（例如：修复了某个Bug），只要有修改就增加C。如果对Python的历史感兴趣，可以阅读名为[《Python简史》](http://www.cnblogs.com/vamei/archive/2013/02/06/2892628.html)的网络文章。
+
+**Introduction to Python**
+
+**History of Python**
+  1. Christmas 1989: Guido van Rossum started writing the compiler for the Python language.
+  2. February 1991: The first Python compiler (also an interpreter) was born, implemented in C, which could call C library     functions. Even in the earliest version, Python provided many core data types such as strings, lists, and dictionaries,     and had system calls and file I/O, as well as exception handling and functions.
+  3. January 1994: Python 1.0 was officially released.
+  4. October 16, 2000: Python 2.0 was released, which added garbage collection and many other features.
+  5. December 3, 2008: Python 3.0 was released, which is not completely backward compatible with previous Python code. However, many companies still use Python 2.x versions in projects and operations, so many new features of Python 3.x are backported to Python 2.x.
+
+Currently, I am using Python 3.7.x version, which was released in 2018. The version number of Python is divided into three segments, in the form of A.B.C. A represents the major version number, and when there is a major rewrite or non-backward compatible change, it will be incremented. B represents the minor version number, and when there are new features added, it will be incremented. C represents the micro version number, and when there are bug fixes or small improvements, it will be incremented.
 
 #### Python的优缺点
 
@@ -29,6 +44,23 @@ Python的缺点主要集中在以下几点。
 1. 执行效率稍低，对执行效率要求高的部分可以由其他语言（如：C、C++）编写。
 2. 代码无法加密，但是现在很多公司都不销售卖软件而是销售服务，这个问题会被弱化。
 3. 在开发时可以选择的框架太多（如Web框架就有100多个），有选择的地方就有错误。
+
+
+**Advantages and Disadvantages of Python**
+
+Python has many advantages, which can be summarized as follows:
+
+  1.Simple and clear, with a low learning curve, easier to get started than many programming languages.
+  2.Open source, with a strong community and ecosystem, especially in the fields of data analysis and machine learning.
+  3.Interpreted language with platform portability, code can work on different operating systems.
+  4.Supports two main programming paradigms (object-oriented programming and functional programming).
+  5.High code standardization and readability, suitable for people with code cleanliness and perfectionism.
+
+Python's disadvantages mainly include:
+
+  1.Slightly lower execution efficiency, but parts requiring high execution efficiency can be written in other languages       (e.g., C, C++).
+  2.Code cannot be encrypted, but since many companies do not sell software but services, this issue is mitigated.
+  3.Too many frameworks to choose from (e.g., there are over 100 web frameworks), and where there are choices, there are       mistakes.
 
 #### Python的应用领域
 
