修改了机器学习部分文档

--- a/Day81-90/81.浅谈机器学习.md
+++ b/Day81-90/81.浅谈机器学习.md
@@ -197,7 +197,7 @@
 
 9. **模型维护**。机器学习模型不是一成不变的，随着时间的推移，模型可能需要通过重新训练、增量学习等方式来维持其性能。
 
-> **说明**：如果对上面出现的一些概念不是很理解，可以先跳过去，我们会在遇到这些问题的时候展开讲解。
+> **说明**：如果对上面出现的概念不是很理解，可以先跳过去，我们会在遇到这些问题的时候展开讲解。
 
 ### 第一次机器学习
 
@@ -376,7 +376,7 @@ $$
 b = \bar{y} - a\bar{x}
 $$
 
-需要说明的是，如果回归模型本身比较复杂，不像线性模型$\small{Y = aX + b}$这么简单，可能没有办法像上面那样直接求解方程，而是要通过不断的迭代去逼近极值点，这个我们会在后续的内容中为大家讲解。回到刚才的问题，我们可以通过上面的公式计算出$\small{a}$和$\small{b}$的值，为了运算方便，下面直接使用了 NumPy 中的函数，因为 NumPy 中的运算都是矢量化的，通常不需要我们自己写循环结构，对 NumPy 不熟悉的小伙伴，可以移步到我的[《基于Python的数据分析》](https://www.zhihu.com/column/c_1217746527315496960)专栏。
+需要说明的是，如果回归模型本身比较复杂，不像线性模型$\small{Y = aX + b}$这么简单，可能没有办法像上面那样直接求解方程，而是要通过其他的方式来找寻极值点，这个我们会在后续的内容中会为大家讲解。回到刚才的问题，我们可以通过上面的公式计算出$\small{a}$和$\small{b}$的值，为了运算方便，下面直接使用了 NumPy 中的函数，因为 NumPy 中的运算都是矢量化的，通常不需要我们自己写循环结构，对 NumPy 不熟悉的小伙伴，可以移步到我的[《基于Python的数据分析》](https://www.zhihu.com/column/c_1217746527315496960)专栏。
 
 ```python
 import numpy as np
