--- a/Day81-90/82.k最近邻算法.md
+++ b/Day81-90/82.k最近邻算法.md
@@ -234,34 +234,34 @@ model.score(X_test, y_test)
 
 1. **准确率**（Accuracy）。
     $$
-    准确率 = \frac{TP + TN}{TP + FP + FN + TN}
+    \text{准确率} = \frac{\text{TP} + \text{TN}}{\text{TP} + \text{FP} + \text{FN} + \text{TN}}
     $$
     上面的例子，模型预测的准确率为：$\small{\frac{80 + 870}{80 + 30 + 20 + 870} = \frac{950}{1000} = 95\%}$。
 
 2. **精确率**（Precesion）。精确率用于衡量在所有被预测为正类的样本中，实际上属于正类的比例，通常也被称为查准率。
     $$
-    精确率 = \frac{TP}{TP+FP}
+    精确率 = \frac{\text{TP}}{\text{TP} + \text{FP}}
     $$
     上面的例子，模型预测的精确率为：$\small{\frac{80}{80 + 30} = \frac{80}{110} = 72.73\%}$。
 
 3. **召回率**（Recall）。召回率用于衡量在所有实际为正类的样本中，被模型正确预测为正类的比例，通常也被称为查全率或真正例率（True Positive Rate）。
     $$
-    召回率 = \frac{TP}{TP + FN}
+    召回率 = \frac{\text{TP}}{\text{TP} + \text{FN}}
     $$
     上面的例子，模型预测的召回率为：$\small{\frac{80}{80 + 20} = \frac{80}{100} = 80\%}$。
 
 4. **F1 分数**（F1 Score）。F1 分数是精确率和召回率的调和平均数，它在精确率和召回率之间寻求一个平衡，尤其适用于在两者之间有权衡的情况。
     $$
-    F1分数 = \frac{2}{\frac{1}{精确率} + \frac{1}{召回率}} = 2 \times \frac{精确率 \times 召回率}{精确率 + 召回率}
+    \text{F1分数} = \frac{2}{\frac{1}{\text{精确率}} + \frac{1}{\text{召回率}}} = 2 \times \frac{\text{精确率} \times \text{召回率}}{\text{精确率} + \text{召回率}}
     $$
     上面的例子，模型预测的F1 分数为：$\small{2 \times \frac{0.7273 * 0.8}{0.7273 + 0.8} = 76.19\%}$。
 
 5. **特异度**（Specificity）和**假正例率**（False Positive Rate）。特异度用于衡量的是在所有实际为负类的样本中，被模型正确预测为负类的比例，类似于召回率，只不过针对的是负类样本。
     $$
-    特异度 = \frac{TN}{TN + FP}
+    \text{特异度} = \frac{\text{TN}}{\text{TN} + \text{FP}}
     $$
     $$
-    假正例率 = 1 - 特异度
+    \text{假正例率} = 1 - \text{特异度}
     $$
     
     上面的例子，模型预测的特异度为：$\small{\frac{870}{870 + 30} = \frac{870}{900} = 96.67\%}$。
@@ -383,7 +383,7 @@ from sklearn.model_selection import GridSearchCV
 
 # 网格搜索交叉验证
 gs = GridSearchCV(
-    KNeighborsClassifier(),
+    estimator=KNeighborsClassifier(),
     param_grid={
         'n_neighbors': [1, 3, 5, 7, 9, 11, 13, 15],
         'weights': ['uniform', 'distance'],
