修正了文档中的问题

--- a/Day81-90/86.K-Means聚类算法.md
+++ b/Day81-90/86.K-Means聚类算法.md
@@ -28,9 +28,8 @@ J = \sum_{i=1}^{K} \sum_{x \in C_{i}} {\lVert x - \mu_{i} \rVert}^{2}
 $$
 其中，$\small{K}$是簇的数量，$\small{C_{i}}$表示第$\small{i}$个簇中的样本集合，$\small{\mu_{i}}$是第$\small{i}$个簇的中心，$\small{x}$是数据点。因为这个问题属于 NP 困难组合优化问题，所以在实际求解时我们会采用迭代的方式来寻求满意解。
 
-首先随机选择$\small{K}$个点作为初始质心 $\small{\mu_{1}, \mu_{2}, \cdots, \mu_{K}}$，对于每个数据点$\small{x_{j}}$。
+首先随机选择$\small{K}$个点作为初始质心 $\small{\mu_{1}, \mu_{2}, \cdots, \mu_{K}}$，对于每个数据点$\small{x_{j}}$，计算到每个质心的距离，选择距离最近的质心，即：
 
-计算到每个质心的距离，选择距离最近的质心，即：
 $$
 C_{i} = \lbrace {x_{j} \ | \ {\lVert x_{j} - \mu_{i} \rVert}^{2} \le {\lVert x_{j} - \mu_{k} \rVert}^{2} \ \text{for all} \ k \ne i} \rbrace
 $$
