更新了机器学习部分文档和资源

--- a/Day81-90/81.浅谈机器学习.md
+++ b/Day81-90/81.浅谈机器学习.md
@@ -413,5 +413,5 @@ print(f'{a = }, {b = }')
 
 ### 小结
 
-首先，希望上面的内容能让大家对机器学习有一个初步的了解；其次，我希望通过本章的内容向大家传达一个观点，自己手撕机器学习的代码比直接调用三方库弄出一个结果来其实更有意思，它会让你对算法原理、应用场景、利弊情况等都有一个更好的认知。
+首先，希望本篇内容能对大家了解机器学习有那么一点点帮助；其次，希望通过本章向大家传达一个理念，自己手撕机器学习的代码比直接调用三方库弄出一个结果来其实更有意思，它会让你对算法原理、应用场景、利弊情况等都有一个更好的认知。
 
