--- a/Day01-15/04.循环结构.md
+++ b/Day01-15/04.循环结构.md
@@ -32,6 +32,15 @@ print(sum)
 - `range(100, 0, -2)`：可以用来产生100到1的偶数，其中-2是步长，即每次数字递减的值。
 
 知道了这一点，我们可以用下面的代码来实现1~100之间的偶数求和。
+拓展知识：
+```python
+for x in range(101):
+    if x>10:
+        break
+else:
+    print(x)
+# 使用break可以终止循环 且此处的else下的语句，只有在break语句生效时才会执行，正常遍历结束则不执行
+```
 
 ```Python
 """
