更新了机器学习部分文档和资源

--- a/Day81-90/88.神经网络模型.md
+++ b/Day81-90/88.神经网络模型.md
@@ -172,12 +172,16 @@ print(classification_report(y_test, y_pred))
 2. `activation`：隐藏层中神经元的激活函数，默认值为`relu`，表示使用 ReLU 激活函数。激活函数决定了网络每一层的输出形态，一般来说，`'relu'` 是训练深度网络时的首选，因为它能够缓解梯度消失问题，并且训练速度较快，可选值包括：
     - `'identity'`：线性激活函数，即$\small{f(x) = x}$，通常不推荐使用。
     - `'logistic'` / `'tanh'` / `'relu'`：Sigmoid / 双曲正切 / ReLU 激活函数。
-3. `alpha`：L2 正则化项（也称为权重衰减），控制神经网络的复杂度，默认值为`0.0001`。
-4. `batch_size`：每次迭代所用的样本批量大小，默认值为`'auto'`，根据样本数量自动决定批量大小。较小的批量会使训练更加不稳定，但有助于避免陷入局部最优解；较大的批量则可以加速训练，但可能导致内存不足。
-5. `learning_rate`：学习率的调节方式，影响模型在每次迭代时调整权重的步长，默认值为`'constant'`，表示学习率保持不变。其他可选的值有`'invscaling'`和`'adaptive'`，前者表示学习率随着迭代次数的增加而逐步减小，后者表示学习率会根据当前梯度变化自动调整，当梯度更新较小时学习率会增加，当梯度较大时学习率会减小。
-6. `learning_rate_init`：初始学习率，默认值为`0.001`。
-7. `max_iter`：最大迭代次数，控制训练过程中优化算法的最大迭代次数，默认值为`200`。若达到最大迭代次数后模型仍未收敛，训练将停止。这对于防止过长时间训练是有用的，但过小的值可能会导致训练中止太早，导致欠拟合。
-8. `tol`：训练过程中的优化容忍度，决定了当目标函数变化小于该值时训练停止，默认值为`0.0001`。较小的 `tol` 会导致更长的训练时间，较大的 `tol` 可能会提前停止训练。
+3. `solver`：用来优化模型参数的求解器（优化算法）。常用的优化算法有：
+    - `'lbfgs'`：拟牛顿法（Limited-memory Broyden-Fletcher-Goldfarb-Shanno），这种方法计算复杂度较高，但对小数据集表现较好。
+    - `'sgd'`：随机梯度下降（Stochastic Gradient Descent），适用于大规模数据集，在训练时会随机选取小批量数据进行更新。
+    - `'adam'`：自适应矩估计（Adaptive Moment Estimation），默认值，适用于大多数情况且计算效率较高。
+4. `alpha`：L2 正则化项（也称为权重衰减），控制神经网络的复杂度，默认值为`0.0001`。
+5. `batch_size`：每次迭代所用的样本批量大小，默认值为`'auto'`，根据样本数量自动决定批量大小。较小的批量会使训练更加不稳定，但有助于避免陷入局部最优解；较大的批量则可以加速训练，但可能导致内存不足。
+6. `learning_rate`：学习率的调节方式，影响模型在每次迭代时调整权重的步长，默认值为`'constant'`，表示学习率保持不变。其他可选的值有`'invscaling'`和`'adaptive'`，前者表示学习率随着迭代次数的增加而逐步减小，后者表示学习率会根据当前梯度变化自动调整，当梯度更新较小时学习率会增加，当梯度较大时学习率会减小。
+7. `learning_rate_init`：初始学习率，默认值为`0.001`。
+8. `max_iter`：最大迭代次数，控制训练过程中优化算法的最大迭代次数，默认值为`200`。若达到最大迭代次数后模型仍未收敛，训练将停止。这对于防止过长时间训练是有用的，但过小的值可能会导致训练中止太早，导致欠拟合。
+9. `tol`：训练过程中的优化容忍度，决定了当目标函数变化小于该值时训练停止，默认值为`0.0001`。较小的 `tol` 会导致更长的训练时间，较大的 `tol` 可能会提前停止训练。
 
 除了 scikit-learn 库，我们还可以使用 TensorFlow、PyTorch、MXNet 等三方库来实现神经网络模型，这些库很多都支持 GPU（图形处理单元） 或 TPU（张量处理单元） 加速，而且内置很多深度网络模型（如卷积神经网络、循环神经网络、生成对抗网络等）以及相应的优化器，相较于 scikit-learn，这些库可能是更好的选择，有兴趣的读者可以自行了解。
 
