更新了部分文档和README文件

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,5 +1,11 @@
 ## 更新日志
 
+### 2025年1月22日
+
+1. 完成了《机器学习》部分的内容。
+2. 更新了部分文档中存在的错误。
+3. 重新启动一个项目来探索深度学习相关内容。
+
 ### 2024年4月18日
 
 1. 重新整理了项目结构，补充了一部分文档。
