--- a/Day91-100/100.Python面试题实录.md
+++ b/Day91-100/100.Python面试题实录.md
@@ -1,4 +1,4 @@
 ## Python面试题实录
 
-> **温馨提示**：请访问我的另一个项目[“Python面试宝典”](https://github.com/jackfrued/Python-Interview-Bible)。
+> **温馨提示**：请移步到我的另一个项目[“Python面试宝典”](https://github.com/jackfrued/Python-Interview-Bible)。
 
