--- a/Day91-100/100.补充内容.md
+++ b/Day91-100/100.补充内容.md
@@ -7,9 +7,9 @@
     - 商业分析面试宝典
     - 数据分析师 SQL 面试宝典
     - 机器学习面试宝典
-2. **数学基础**相关资源请移步到[“机器学习数学基础知识”](https://github.com/jackfrued/Math_for_ML)](https://github.com/jackfrued/Python-Interview-Bible)项目。
+2. **数学基础**相关资源请移步到[“机器学习数学基础知识”](https://github.com/jackfrued/Math_for_ML)项目。
     - 线性代数
     - 概率论和统计学
     - 高等数学
     - 信息论
-3. **深度学习**相关内容请移步到[“深度学习就是大力出奇迹”](https://github.com/jackfrued/Deep-Learning-Is-Nothing)](https://github.com/jackfrued/Python-Interview-Bible)项目。
+3. **深度学习**相关内容请移步到[“深度学习就是大力出奇迹”](https://github.com/jackfrued/Deep-Learning-Is-Nothing)项目。
